...

        ) {
            Button(onClick = {navController.navigate(Screens.PocetnaStranica.route)},
                modifier = Modifier
                    .fillMaxSize()
                    .padding(5.dp)
                    .testTag("testTag_IncijalniZaslon_startButton"),


            )
            {
                Column(
                  horizontalAlignment = Alignment.CenterHorizontally
...
