...
    val lista_ljubimaca_objekata: List<Ljubimac> by zivi_podaci.observeAsState(emptyList())

    Column(
        modifier = Modifier
            .fillMaxSize()
            .background(Color.Gray)
            .testTag("testTag_Savjetovaliste_Kolumna"),
        //verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally
    ) {

        LazyColumn{
            items(lista_ljubimaca_objekata){
...
